# nyc-taxi-warehouse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  script_entrypoint.sh
db/init/: 01_schema.sql  02_bronze_load.sql  03_silver_transform.sql  05_views.sql  06_audit.sql
db/schemas/silver/: 01_silver_taxi_zones.sql  02_silver_taxi_data_quality_issues.sql  02_taxi_data_quality_issues.sql  03_taxi_trips_cleaned.sql
etl/: extract.py  load.py  transform.py
reports/: report.json
scripts/: database.py  entrypoint.sh  loader.py  main.py  run_pipeline.sh  schema_manager.py  taxi_extractor.py
scripts/configs/: __init__.py  config.py
scripts/layers/: layer_model.py
scripts/layers/bronze/: bronze_loader.py
scripts/layers/gold/: gold_mart_builder.py  query_runner.py  view_creator.py
scripts/layers/silver/: silver_transform.py
scripts/managers/: audit_manager.py  schema_manager.py
utils/: constants.py  helpers.py  inspect_cols.py
